# wind-covariation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Snakefile  environment.yml  min_variance.py  nve_data.py  print_nve_table.py  pyproject.toml  requirements.txt  run_analysis.py  run_augmented_lagrangian_htuning.py  run_augmented_lagrangian_multiple.py  run_data_fetcher.py
.devcontainer/: Dockerfile  devcontainer.json
Wind/: analyze.py  augmented_lagrangian.py  load_data.py  plotly_template.py  rninja_client.py
Wind/AugmentedLagrangian/: augmented_lagrangian.py  loss_functions.py
notebooks/: Analyze-backup.py.ipynb  Analyze.py.ipynb  Analyze.py.ipynb-restore.txt  Augmented Lagrangian.ipynb  EDA.ipynb
scripts/: _helpers.py  check_mount_port.sh  combine_alpha_runs.py  combine_wind_data.py  compute_weights_sintef_study.py  get_nve_offshore_wind_areas.py  mount_file_share.sh  perform_dtw_pca.py  plot_weights.py  print_latex_table.py  run_analysis.py  run_augmented_lagrangian.py
