[tool.poetry]
name = "wind-covariation"
version = "0.1.0"
description = "Analyze covaration challenges for north sea wind"
authors = ["Martin Hjelmeland <hjelmeland.martin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wind_covariation"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pandas = "^2.0.0"
plotly = "^5.14.0"
matplotlib = "^3.7.1"
ipykernel = "^6.22.0"
torch = "^2.0.0"
azure-storage-file-share = "^12.11.1"
geopy = "^2.3.0"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
kaleido = "0.2.1"
tqdm = "^4.65.0"
nbformat = "^5.8.0"
torchvision = "^0.15.1"
tensorboard = "^2.12.1"
torch-tb-profiler = "^0.4.1"
snakemake = "^7.25.0"
nbstripout = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
autopep8 = "^2.0.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=120
